--- a/pj-ai-poc-ui/pj-ai-poc-ui.vbproj
+++ b/pj-ai-poc-ui/pj-ai-poc-ui.vbproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Content Include="01_search.html" />
     <Content Include="02_listen.html" />
+    <Content Include="03_answer_floor.html" />
     <Content Include="03_answer.html" />
     <Content Include="css\bootstrap-theme.css" />
     <Content Include="css\bootstrap-theme.min.css" />
@@ -154,6 +155,7 @@
     <Content Include="index03.html" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
+    <Content Include="js\getdata_floor.js" />
     <Content Include="js\getdata.js" />
     <Content Include="js\getdatafromfile.js" />
     <Content Include="js\jquery-3.1.1.min.js" />
