--- a/pj-ai-poc-ui/pj-ai-poc-ui.vbproj
+++ b/pj-ai-poc-ui/pj-ai-poc-ui.vbproj
@@ -108,21 +108,78 @@
     <Content Include="data\Q10_4.jpg" />
     <Content Include="data\Q10_5.jpg" />
     <Content Include="data\Q10_6.jpg" />
+    <Content Include="data\Q11_1.jpg" />
+    <Content Include="data\Q11_2.jpg" />
+    <Content Include="data\Q11_3.jpg" />
+    <Content Include="data\Q11_4.jpg" />
+    <Content Include="data\Q11_5.jpg" />
     <Content Include="data\Q12_1 .jpg" />
     <Content Include="data\Q12_2.jpg" />
     <Content Include="data\Q12_3.jpg" />
     <Content Include="data\Q12_4.jpg" />
     <Content Include="data\Q12_5.jpg" />
+    <Content Include="data\Q13_1.jpg" />
+    <Content Include="data\Q13_2.jpg" />
+    <Content Include="data\Q13_3.jpg" />
+    <Content Include="data\Q13_4.jpg" />
+    <Content Include="data\Q13_5.jpg" />
+    <Content Include="data\Q14_1.jpg" />
+    <Content Include="data\Q14_2.jpg" />
+    <Content Include="data\Q14_3.jpg" />
     <Content Include="data\Q15_1.jpg" />
     <Content Include="data\Q15_2.jpg" />
     <Content Include="data\Q15_3.jpg" />
     <Content Include="data\Q15_4.jpg" />
     <Content Include="data\Q15_5.jpg" />
+    <Content Include="data\Q16_1.jpg" />
+    <Content Include="data\Q16_2.jpg" />
+    <Content Include="data\Q16_3.jpg" />
+    <Content Include="data\Q16_4.jpg" />
+    <Content Include="data\Q16_5.jpg" />
+    <Content Include="data\Q16_6.jpg" />
+    <Content Include="data\Q17_1.png" />
+    <Content Include="data\Q17_2.png" />
+    <Content Include="data\Q17_3.png" />
+    <Content Include="data\Q19_1.jpg" />
+    <Content Include="data\Q19_2.jpg" />
+    <Content Include="data\Q19_3.jpg" />
+    <Content Include="data\Q20_1.png" />
+    <Content Include="data\Q20_2.png" />
+    <Content Include="data\Q20_3.png" />
+    <Content Include="data\Q20_4.png" />
+    <Content Include="data\Q22_1.png" />
+    <Content Include="data\Q22_2.png" />
+    <Content Include="data\Q22_3.png" />
+    <Content Include="data\Q23_1.png" />
+    <Content Include="data\Q23_2.png" />
+    <Content Include="data\Q24_FloorMap.png" />
+    <Content Include="data\Q25_FloorMap.png" />
+    <Content Include="data\Q26_1.png" />
+    <Content Include="data\Q26_2.png" />
+    <Content Include="data\Q26_3.png" />
+    <Content Include="data\Q27_1.jpg" />
+    <Content Include="data\Q27_2.jpg" />
+    <Content Include="data\Q27_3.jpg" />
+    <Content Include="data\Q27_4.jpg" />
+    <Content Include="data\Q27_5.jpg" />
+    <Content Include="data\Q28_1.jpg" />
+    <Content Include="data\Q28_2.jpg" />
+    <Content Include="data\Q28_3.jpg" />
+    <Content Include="data\Q28_4.jpg" />
+    <Content Include="data\Q29_FloorMap.png" />
     <Content Include="data\Q30_1.jpg" />
     <Content Include="data\Q30_2.jpg" />
     <Content Include="data\Q30_3.jpg" />
     <Content Include="data\Q30_4.jpg" />
     <Content Include="data\Q30_5.jpg" />
+    <Content Include="data\Q31_1.jpg" />
+    <Content Include="data\Q31_2.jpg" />
+    <Content Include="data\Q31_3.jpg" />
+    <Content Include="data\Q31_4.jpg" />
+    <Content Include="data\Q31_5.jpg" />
+    <Content Include="data\Q32.png" />
+    <Content Include="data\Q33.jpg" />
+    <Content Include="data\Q34.jpg" />
     <Content Include="data\Q3_1.jpg" />
     <Content Include="data\Q3_2.jpg" />
     <Content Include="data\Q3_3.jpg" />
@@ -139,6 +196,7 @@
     <Content Include="data\Q9_1.jpg" />
     <Content Include="data\Q9_2.jpg" />
     <Content Include="data\Q9_3.jpg" />
+    <Content Include="data\Q9_4.jpg" />
     <Content Include="data\Q9_test.jpg" />
     <Content Include="data\いちご.png" />
     <Content Include="img\Balloon_01.png" />
@@ -152,6 +210,7 @@
     <Content Include="index.htm" />
     <Content Include="index01.html" />
     <Content Include="index02.html" />
+    <Content Include="index03_floor.html" />
     <Content Include="index03.html" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
@@ -206,6 +265,27 @@
     <Content Include="data\paella.csv" />
     <Content Include="data\pot.csv" />
     <Content Include="data\whiteday.csv" />
+    <Content Include="data\Q10.csv" />
+    <Content Include="data\Q11.csv" />
+    <Content Include="data\Q12.csv" />
+    <Content Include="data\Q13.csv" />
+    <Content Include="data\Q14.csv" />
+    <Content Include="data\Q15.csv" />
+    <Content Include="data\Q16.csv" />
+    <Content Include="data\Q17.csv" />
+    <Content Include="data\Q19.csv" />
+    <Content Include="data\Q20.csv" />
+    <Content Include="data\Q22.csv" />
+    <Content Include="data\Q23.csv" />
+    <Content Include="data\Q26.csv" />
+    <Content Include="data\Q27.csv" />
+    <Content Include="data\Q28.csv" />
+    <Content Include="data\Q3.csv" />
+    <Content Include="data\Q30.csv" />
+    <Content Include="data\Q31.csv" />
+    <Content Include="data\Q7.csv" />
+    <Content Include="data\Q8.csv" />
+    <Content Include="data\Q9.csv" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
