--- a/pj-ai-poc-ui/pj-ai-poc-ui.vbproj
+++ b/pj-ai-poc-ui/pj-ai-poc-ui.vbproj
@@ -115,7 +115,7 @@
     <Content Include="data\Q11_3.jpg" />
     <Content Include="data\Q11_4.jpg" />
     <Content Include="data\Q11_5.jpg" />
-    <Content Include="data\Q12_1 .jpg" />
+    <Content Include="data\Q12_1.jpg" />
     <Content Include="data\Q12_2.jpg" />
     <Content Include="data\Q12_3.jpg" />
     <Content Include="data\Q12_4.jpg" />
@@ -142,6 +142,8 @@
     <Content Include="data\Q17_1.png" />
     <Content Include="data\Q17_2.png" />
     <Content Include="data\Q17_3.png" />
+    <Content Include="data\Q18_1.jpg" />
+    <Content Include="data\Q18_2.jpg" />
     <Content Include="data\Q19_1.jpg" />
     <Content Include="data\Q19_2.jpg" />
     <Content Include="data\Q19_3.jpg" />
@@ -299,10 +301,13 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="data\Q18.csv" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
+    <None Include="My Project\PublishProfiles\AiPocWeb - FTP.pubxml" />
+    <None Include="My Project\PublishProfiles\AiPocWeb - Web Deploy.pubxml" />
     <None Include="My Project\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <CustomToolNamespace>My</CustomToolNamespace>
